Add support for markdown and plaintext file types

--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
             "javascript",
             "typescript",
             "python",
+            "markdown",
+            "plaintext",
             "java",
             "c",
             "cpp",
